fix text alignment and remove ugly hack by using position: fixed

--- a/docs/style.css
+++ b/docs/style.css
@@ -217,7 +217,7 @@ image {
 }
 
 .text-box-container {
-  position: absolute;
+  position: fixed;
 }
 
 .text-box-textarea {
